<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="Status" Id="{54617d81-1fbf-4cb5-9a8e-568bb1c45c68}">
    <Declaration><![CDATA[TYPE Status :
STRUCT
	Busy: BOOL;
	Transmit: BOOL;
	SendAck: BOOL;
	UpdateAck: BOOL;
	CommandAck: BOOL;
	CommandReject: BOOL;
	Warning: BOOL;
	Error: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>